src/peggy/exprParser.ts
// @ts-nocheck
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { ExprList: peg$parseExprList };
  var peg$startRuleFunction = peg$parseExprList;

  var peg$c0 = ",";
  var peg$c1 = "=";
  var peg$c2 = "+=";
  var peg$c3 = "-=";
  var peg$c4 = "*=";
  var peg$c5 = "/=";
  var peg$c6 = "or";
  var peg$c7 = "and";
  var peg$c8 = "==";
  var peg$c9 = "!=";
  var peg$c10 = ">=";
  var peg$c11 = ">";
  var peg$c12 = "<=";
  var peg$c13 = "<";
  var peg$c14 = "+";
  var peg$c15 = "-";
  var peg$c16 = "*";
  var peg$c17 = "/";
  var peg$c18 = "%";
  var peg$c19 = "not";
  var peg$c20 = "(";
  var peg$c21 = ")";
  var peg$c22 = "[";
  var peg$c23 = "]";
  var peg$c24 = ".";
  var peg$c25 = "\"";
  var peg$c26 = "\\";
  var peg$c27 = "'";
  var peg$c28 = "true";
  var peg$c29 = "false";
  var peg$c30 = "null";
  var peg$c31 = "nullUnit";

  var peg$r0 = /^[^\- \n\t+*\/&\^%$#@!\\|'";:?.[\]{}`~()=,0-9]/;
  var peg$r1 = /^[^\- \n\t+*\/&\^%$#@!\\|'";:?.[\]{}`~()=,]/;
  var peg$r2 = /^[1-9]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[^"]/;
  var peg$r5 = /^[^']/;
  var peg$r6 = /^[ \t\n]/;

  var peg$e0 = peg$literalExpectation(",", false);
  var peg$e1 = peg$anyExpectation();
  var peg$e2 = peg$literalExpectation("=", false);
  var peg$e3 = peg$literalExpectation("+=", false);
  var peg$e4 = peg$literalExpectation("-=", false);
  var peg$e5 = peg$literalExpectation("*=", false);
  var peg$e6 = peg$literalExpectation("/=", false);
  var peg$e7 = peg$literalExpectation("or", false);
  var peg$e8 = peg$literalExpectation("and", false);
  var peg$e9 = peg$literalExpectation("==", false);
  var peg$e10 = peg$literalExpectation("!=", false);
  var peg$e11 = peg$literalExpectation(">=", false);
  var peg$e12 = peg$literalExpectation(">", false);
  var peg$e13 = peg$literalExpectation("<=", false);
  var peg$e14 = peg$literalExpectation("<", false);
  var peg$e15 = peg$literalExpectation("+", false);
  var peg$e16 = peg$literalExpectation("-", false);
  var peg$e17 = peg$literalExpectation("*", false);
  var peg$e18 = peg$literalExpectation("/", false);
  var peg$e19 = peg$literalExpectation("%", false);
  var peg$e20 = peg$literalExpectation("not", false);
  var peg$e21 = peg$literalExpectation("(", false);
  var peg$e22 = peg$literalExpectation(")", false);
  var peg$e23 = peg$literalExpectation("[", false);
  var peg$e24 = peg$literalExpectation("]", false);
  var peg$e25 = peg$literalExpectation(".", false);
  var peg$e26 = peg$classExpectation(["-", " ", "\n", "\t", "+", "*", "/", "&", "^", "%", "$", "#", "@", "!", "\\", "|", "'", "\"", ";", ":", "?", ".", "[", "]", "{", "}", "`", "~", "(", ")", "=", ",", ["0", "9"]], true, false);
  var peg$e27 = peg$classExpectation(["-", " ", "\n", "\t", "+", "*", "/", "&", "^", "%", "$", "#", "@", "!", "\\", "|", "'", "\"", ";", ":", "?", ".", "[", "]", "{", "}", "`", "~", "(", ")", "=", ","], true, false);
  var peg$e28 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e29 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e30 = peg$literalExpectation("\"", false);
  var peg$e31 = peg$literalExpectation("\\", false);
  var peg$e32 = peg$classExpectation(["\""], true, false);
  var peg$e33 = peg$literalExpectation("'", false);
  var peg$e34 = peg$classExpectation(["'"], true, false);
  var peg$e35 = peg$literalExpectation("true", false);
  var peg$e36 = peg$literalExpectation("false", false);
  var peg$e37 = peg$literalExpectation("null", false);
  var peg$e38 = peg$literalExpectation("nullUnit", false);
  var peg$e39 = peg$classExpectation([" ", "\t", "\n"], false, false);

  var peg$f0 = function(head, tail) {
    if(tail) {
      if(!options.allowList) {
        return error(options.errors['expr.list.disabled'])
      }
      return {
        nodeType: 'expr_list',
        exprs: [head, ...tail]
      }
    }
    return head
  };
  var peg$f1 = function(expr) {
    return expr
  };
  var peg$f2 = function() {
    error(options.errors['expr.invalid'])
  };
  var peg$f3 = function(expr) {
    return expr
  };
  var peg$f4 = function(left, right) {
    if(!options.allowAssign) {
      error(options.errors['assign.diabled'])
    }
    return {
      nodeType: 'expr_assign',
      left,
      right,
    }
  };
  var peg$f5 = function(left, right) {
    if(!options.allowAssign) {
      error(options.errors['assign.diabled'])
    }
    return {
      nodeType: 'expr_add_assign',
      left,
      right,
    }
  };
  var peg$f6 = function(left, right) {
    if(!options.allowAssign) {
      error(options.errors['assign.diabled'])
    }
    return {
      nodeType: 'expr_sub_assign',
      left,
      right,
    }
  };
  var peg$f7 = function(left, right) {
    if(!options.allowAssign) {
      error(options.errors['assign.diabled'])
    }
    return {
      nodeType: 'expr_mul_assign',
      left,
      right,
    }
  };
  var peg$f8 = function(left, right) {
    if(!options.allowAssign) {
      error(options.errors['assign.diabled'])
    }
    return {
      nodeType: 'expr_div_assign',
      left,
      right,
    }
  };
  var peg$f9 = function(node) {
    return node
  };
  var peg$f10 = function(head, tail) {
    return {
      nodeType: 'expr_or',
      values: [head, ...tail]
    }
  };
  var peg$f11 = function(node) {
    return node
  };
  var peg$f12 = function(head, tail) {
    return {
      nodeType: 'expr_and',
      values: [head, ...tail]
    }
  };
  var peg$f13 = function(node) {
    return node
  };
  var peg$f14 = function(left, right) {
    return {
      nodeType: 'expr_eq',
      left,
      right,
    }
  };
  var peg$f15 = function(left, right) {
    return {
      nodeType: 'expr_ne',
      left,
      right,
    }
  };
  var peg$f16 = function(node) {
    return node
  };
  var peg$f17 = function(left, right) {
    return {
      nodeType: 'expr_ge',
      left,
      right,
    }
  };
  var peg$f18 = function(left, right) {
    return {
      nodeType: 'expr_gt',
      left,
      right,
    }
  };
  var peg$f19 = function(left, right) {
    return {
      nodeType: 'expr_le',
      left,
      right,
    }
  };
  var peg$f20 = function(left, right) {
    return {
      nodeType: 'expr_lt',
      left,
      right,
    }
  };
  var peg$f21 = function(node) {
    return node
  };
  var peg$f22 = function(head, tail) {
    return {
      nodeType: 'expr_add',
      values: [head, ...tail]
    }
  };
  var peg$f23 = function(head, tail) {
    return {
      nodeType: 'expr_sub',
      values: [head, ...tail]
    }
  };
  var peg$f24 = function(node) {
    return node
  };
  var peg$f25 = function(head, tail) {
    return {
      nodeType: 'expr_mul',
      values: [head, ...tail]
    }
  };
  var peg$f26 = function(head, tail) {
    return {
      nodeType: 'expr_div',
      values: [head, ...tail]
    }
  };
  var peg$f27 = function(head, tail) {
    return {
      nodeType: 'expr_mod',
      values: [head, ...tail]
    }
  };
  var peg$f28 = function(node) {
    return node
  };
  var peg$f29 = function(expr) {
    return {
      nodeType: 'expr_not',
      expr,
    }
  };
  var peg$f30 = function(node) {
    return node
  };
  var peg$f31 = function(func, list) {
    return {
      nodeType: 'func_call',
      func,
      params: list || [],
    }
  };
  var peg$f32 = function(arr, index) {
    return {
      nodeType: 'arr_index',
      arr,
      index,
    }
  };
  var peg$f33 = function(obj, member) {
    return {
      nodeType: 'obj_member',
      obj,
      member,
    }
  };
  var peg$f34 = function(node) {
    return node
  };
  var peg$f35 = function(expr) {
    return expr
  };
  var peg$f36 = function(node) {
    return node
  };
  var peg$f37 = function(node) {
    return node
  };
  var peg$f38 = function(node) {
    return node
  };
  var peg$f39 = function(head, tail) {
    return [head, ...tail]
  };
  var peg$f40 = function(key, value) {
    return {
      nodeType: 'param',
      key,
      value,
    }
  };
  var peg$f41 = function(value) {
    return {
      nodeType: 'param',
      value,
    }
  };
  var peg$f42 = function(value) {
    return {
      nodeType: 'identifier',
      value,
    }
  };
  var peg$f43 = function(value) {
    return {
      nodeType: 'literal_number',
      value,
    }
  };
  var peg$f44 = function(value) {
    return {
      nodeType: 'literal_string',
      value,
    }
  };
  var peg$f45 = function(value) {
    return {
      nodeType: 'literal_boolean',
      value,
    }
  };
  var peg$f46 = function(value) {
    return {
      nodeType: 'literal_null',
      value,
    }
  };
  var peg$f47 = function(value) {
    let res = value
    for(const k of Object.keys(options.escapeMap)) {
      res = res.replaceAll(new RegExp('\\\\' + k, 'g'), options.escapeMap[k])
    }
    return res.replaceAll(/\\(.)/g, '$1')
  };
  var peg$f48 = function(value) {
    let res = value
    for(const k of Object.keys(options.escapeMap)) {
      res = res.replaceAll(new RegExp('\\\\' + k, 'g'), options.escapeMap[k])
    }
    return res.replaceAll(/\\(.)/g, '$1')
  };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$resultsCache = {};

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExprList() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    var key = peg$currPos * 26 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseExpr();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseWhiteSpace();
      if (input.charCodeAt(peg$currPos) === 44) {
        s5 = peg$c0;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parseWhiteSpace();
        s7 = peg$parseExprList();
        if (s7 !== peg$FAILED) {
          s3 = s7;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseWhiteSpace();
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parseWhiteSpace();
          s7 = peg$parseExprList();
          if (s7 !== peg$FAILED) {
            s3 = s7;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseExpr() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 26 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseWhiteSpace();
    s2 = peg$parseAssignExpr();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseWhiteSpace();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (input.length > peg$currPos) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2();
      }
      s0 = s1;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseNoWhiteSpaceAroundExpr() {
    var s0, s1;

    var key = peg$currPos * 26 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseAssignExpr();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseAssignExpr() {
    var s0, s1, s2, s3, s4, s5, s6;

    var key = peg$currPos * 26 + 3;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
